--- a/client/src/home.css
+++ b/client/src/home.css
@@ -29,7 +29,7 @@ h3 {
 
 main {
   font-family: "Poppins", sans-serif;
-  /* height: 100%; */
+  height:100%;
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
   /* display: flex;
   align-items: center;
@@ -219,6 +219,7 @@ main {
   font-size: 0.8em;
   word-wrap: break-word;
   text-align: justify;
+  padding:5px 20px 5px;
 }
 
 .main-body input,
